Added Keycloak support for user authentication and CRUD for Pet class
